--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 /* Caixa de seleção do tema */
-#theme-selector {
+#theme-selector,tema-section,subtema-section {
     width: 100%;
     padding: 10px;
     margin-top: 10px;
