--- a/style.css
+++ b/style.css
@@ -25,11 +25,24 @@ body {
 }
 
 /* Caixa de seleção do tema */
-#titulo-selector,
-#subtema-selector,
+
 #carregar-subtemas,
 #start-quiz {
   width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: #444;
+  color: white;
+  font-size: 14px;
+  text-align: center;
+  cursor: pointer;
+}
+
+#carregar-subtemas,
+#start-quiz {
+  width: 30%;
   padding: 10px;
   margin-top: 10px;
   border-radius: 5px;
