--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
 
 /* Caixa de seleção do tema */
 
-#carregar-subtemas,
-#start-quiz {
+#tema-section,
+#subtema-section {
   width: 100%;
   padding: 10px;
   margin-top: 10px;
