--- a/style.css
+++ b/style.css
@@ -174,6 +174,21 @@ button:hover, .option:hover {
   z-index: 9999;
 }
 
+#loadingQR {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #1e1e1e;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+  z-index: 9999;
+  max-width: 300px;
+  text-align: center;
+}
+
+
 #instrucoes-modal {
   position: fixed;
   top: 20%;
